trunk/Archive2/6c/7a43dab8f85b10/output
main.cpp:3:10: error: expected function body after function declarator
void f() throw(int)
         ^
main.cpp:1:48: note: expanded from macro 'throw'
#define throw(...) __attribute__((deprecated)) throw(__VA_ARGS__)
                                               ^
1 error generated.
